--- a/planty/vercel.json
+++ b/planty/vercel.json
@@ -8,6 +8,9 @@
         "src": "/(.*)",
         "dest": "/api/index.php"
     }],
+    "rewrites":  [
+        {"source": "/(.*)", "destination": "/"}
+    ],
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
